feat: 完成引入markdown编辑器，添加顶部菜单

--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vicons/ionicons5": "^0.13.0",
     "axios": "^1.7.9",
     "js-cookie": "^3.0.5",
+    "md-editor-v3": "^5.2.1",
     "pinia": "^2.3.0",
     "sass": "^1.83.0",
     "vue": "^3.5.13",
@@ -19,9 +21,9 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
     "naive-ui": "^2.40.4",
-    "vfonts": "^0.0.3",
     "unplugin-auto-import": "^0.19.0",
     "unplugin-vue-components": "^0.28.0",
+    "vfonts": "^0.0.3",
     "vite": "^6.0.3"
   }
 }
