--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.9",
     "js-cookie": "^3.0.5",
     "md-editor-v3": "^5.2.1",
+    "parallax-js": "^3.1.0",
     "pinia": "^2.3.0",
     "sass": "^1.83.0",
     "vue": "^3.5.13",
